test/conformance/chainsaw/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/chainsaw-step-02-apply-1-2.yaml
apiVersion: v1
data:
  color: blue
kind: ConfigMap
metadata:
  name: my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
  namespace: trigger-resource-name-exceeds-63-characters-ns
