test/conformance/chainsaw/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-network-policy
spec:
  rules:
  - generate:
      apiVersion: networking.k8s.io/v1
      data:
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
      kind: NetworkPolicy
      name: default-deny
      namespace: '{{request.object.metadata.namespace}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
    name: default-deny
