test/conformance/chainsaw/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: generate-network-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
