test/conformance/chainsaw/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/04-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: ConfigMap
      name: my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
      namespace: trigger-resource-name-exceeds-63-characters-ns
