test/conformance/chainsaw/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: trigger-resource-name-exceeds-63-characters
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-network-policy
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - apply:
        file: chainsaw-step-02-apply-1-2.yaml
  - name: step-03
    try:
    - assert:
        file: downstream.yaml
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
          namespace: trigger-resource-name-exceeds-63-characters-ns
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - error:
        file: downstream.yaml
